# qonductor

./: .gitignore  Cargo.toml  README.md  build.rs  credentials.toml.example
docs/: architecture.md  ws-session-debug-renderer-change.md  ws-session-debug-while-playing.md  ws-session-debug.md
examples/: direct_auth.rs  discovery_server.rs  fake_player.rs  fetch_credentials.rs  mdns_test.rs
proto/: qconnect_common.proto  qconnect_envelope.proto  qconnect_payload.proto  qconnect_queue.proto  ws.proto
src/: config.rs  connection.rs  credentials.rs  discovery.rs  error.rs  event.rs  lib.rs  manager.rs  msg.rs  protocol.rs  qconnect.rs  session.rs  transport.rs  types.rs
src/proto/: qconnect.rs  ws.rs
