[package]
name = "qonductor"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of the Qobuz Connect protocol"
license = "MIT"
repository = "https://github.com/nickblt/qonductor"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# HTTP server for discovery
axum = "0.8"

# Protobuf
prost = "0.13"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Cryptography
md-5 = "0.10"

# Encoding
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL handling
url = "2"

# Utilities
bytes = "1"
futures = "0.3"
rand = "0.8"
uuid = { version = "1", features = ["std"] }

# mDNS via zeroconf-tokio (uses system avahi)
zeroconf-tokio = "0.3"

[dev-dependencies]
tokio-test = "0.4"
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"

[build-dependencies]
prost-build = "0.13"
